public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/1532/source/compile
source.c: In function ‘main’:
source.c:7:10: error: ‘i’ undeclared (first use in this function)
     for (i=1; i<=n; i++)
          ^
source.c:7:10: note: each undeclared identifier is reported only once for each function it appears in
